// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<HorizontalAutoScroller /> > should match the snapshot for 8 items 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_flexDirection_column_mobile__onxwjuoo Stack_child_default__1417p7aa Stack_child_spaces_5__1417p7a4"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju98 sprinkles_overflow_hidden_mobile__onxwju88"
      >
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_position_absolute_mobile__onxwju9c sprinkles_alignItems_center_mobile__onxwjukk sprinkles_justifyContent_flexStart_mobile__onxwjul4 HorizontalAutoScroller_controllerBtn__2i92q00 HorizontalAutoScroller_prevBtn__2i92q02"
        >
          <button
            class="reset_trimmedElement__4z7xt30 reset_button__4z7xt34 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l1g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3o useBoxStyles_display_inlineBlock__3xgq1lge useBoxStyles_overflow_hidden__3xgq1lg4 useBoxStyles_textAlign_center__3xgq1lg2 useBoxStyles_border_style__3xgq1l9k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lb9 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lbp useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lc5 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1ldl useTextStyles_root__1xnpmd70 reset_block__4z7xt33 useTextStyles_colours_white__1xnpmd7g useTextStyles_fontWeight_semiBold__1xnpmd7p useTextStyles_sizes_4__1xnpmd74 Button_button__p2yon53 focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon55 Button_button_shape_iconOnly__p2yon59 Button_button_intent_secondary__p2yon5c Button_button_minimal_false__p2yon5i Button_button_compound_5__p2yon5o"
            type="button"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_height_full_mobile__onxwjue8 sprinkles_alignItems_center_mobile__onxwjukk sprinkles_justifyContent_center_mobile__onxwjulc Button_body__p2yon50"
            >
              <span
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_display_block_mobile__onxwju74 Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              >
                <svg
                  aria-hidden="true"
                  class="useBoxStyles_display_block__3xgq1lg9 useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.414 16.584l-4.586-4.586 4.586-4.586-1.415-1.414-6 6 6 6 1.415-1.414z"
                  />
                </svg>
              </span>
            </div>
          </button>
        </div>
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_width_full_mobile__onxwjufs sprinkles_overflow_hidden_mobile__onxwju88 sprinkles_flexDirection_row_mobile__onxwjuok useNegativeMarginLeft_makeResponsiveStyle_key_bp__10sqwm2g useNegativeMarginTop_makeResponsiveStyle_key_bp__rvovxwg Columns_columnsStyle__15fwc1828 Columns_columnsStyle_align_stretch__15fwc1829 Columns_columnsStyle_noWrap_true__15fwc182e Columns_columnsStyle_wrappingDirection_default__15fwc182f"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_columnStyle__1ycz12q1c Column_columnStyle_grow_false__1ycz12q1i Column_columnStyle_noShrink_true__1ycz12q1j"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_width_full_mobile__onxwjufs sprinkles_height_full_mobile__onxwjue8 HorizontalAutoScroller_controllerCol__2i92q01"
            >
              <span />
            </div>
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1c Column_columnStyle_grow_false__1ycz12q1i Column_columnStyle_noShrink_true__1ycz12q1j Column_columnStyle_alignSelf_stretch__1ycz12q1f Column__1ycz12q1a sprinkles_alignSelf_stretch_mobile__onxwjuo4"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_width_full_mobile__onxwjufs sprinkles_height_full_mobile__onxwjue8 sprinkles_justifyContent_stretch_mobile__onxwjum8"
            >
              <div
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjufs HorizontalAutoScroller_item__2i92q04 HorizontalAutoScroller_active__2i92q05"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1c Column_columnStyle_grow_false__1ycz12q1i Column_columnStyle_noShrink_true__1ycz12q1j Column_columnStyle_alignSelf_stretch__1ycz12q1f Column__1ycz12q1a sprinkles_alignSelf_stretch_mobile__onxwjuo4"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_width_full_mobile__onxwjufs sprinkles_height_full_mobile__onxwjue8 sprinkles_justifyContent_stretch_mobile__onxwjum8"
            >
              <div
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjufs HorizontalAutoScroller_item__2i92q04"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1c Column_columnStyle_grow_false__1ycz12q1i Column_columnStyle_noShrink_true__1ycz12q1j Column_columnStyle_alignSelf_stretch__1ycz12q1f Column__1ycz12q1a sprinkles_alignSelf_stretch_mobile__onxwjuo4"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_width_full_mobile__onxwjufs sprinkles_height_full_mobile__onxwjue8 sprinkles_justifyContent_stretch_mobile__onxwjum8"
            >
              <div
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjufs HorizontalAutoScroller_item__2i92q04"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1c Column_columnStyle_grow_false__1ycz12q1i Column_columnStyle_noShrink_true__1ycz12q1j Column_columnStyle_alignSelf_stretch__1ycz12q1f Column__1ycz12q1a sprinkles_alignSelf_stretch_mobile__onxwjuo4"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_width_full_mobile__onxwjufs sprinkles_height_full_mobile__onxwjue8 sprinkles_justifyContent_stretch_mobile__onxwjum8"
            >
              <div
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjufs HorizontalAutoScroller_item__2i92q04"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1c Column_columnStyle_grow_false__1ycz12q1i Column_columnStyle_noShrink_true__1ycz12q1j Column_columnStyle_alignSelf_stretch__1ycz12q1f Column__1ycz12q1a sprinkles_alignSelf_stretch_mobile__onxwjuo4"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_width_full_mobile__onxwjufs sprinkles_height_full_mobile__onxwjue8 sprinkles_justifyContent_stretch_mobile__onxwjum8"
            >
              <div
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjufs HorizontalAutoScroller_item__2i92q04"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1c Column_columnStyle_grow_false__1ycz12q1i Column_columnStyle_noShrink_true__1ycz12q1j Column_columnStyle_alignSelf_stretch__1ycz12q1f Column__1ycz12q1a sprinkles_alignSelf_stretch_mobile__onxwjuo4"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_width_full_mobile__onxwjufs sprinkles_height_full_mobile__onxwjue8 sprinkles_justifyContent_stretch_mobile__onxwjum8"
            >
              <div
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjufs HorizontalAutoScroller_item__2i92q04"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1c Column_columnStyle_grow_false__1ycz12q1i Column_columnStyle_noShrink_true__1ycz12q1j Column_columnStyle_alignSelf_stretch__1ycz12q1f Column__1ycz12q1a sprinkles_alignSelf_stretch_mobile__onxwjuo4"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_width_full_mobile__onxwjufs sprinkles_height_full_mobile__onxwjue8 sprinkles_justifyContent_stretch_mobile__onxwjum8"
            >
              <div
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjufs HorizontalAutoScroller_item__2i92q04"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1c Column_columnStyle_grow_false__1ycz12q1i Column_columnStyle_noShrink_true__1ycz12q1j Column_columnStyle_alignSelf_stretch__1ycz12q1f Column__1ycz12q1a sprinkles_alignSelf_stretch_mobile__onxwjuo4"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_width_full_mobile__onxwjufs sprinkles_height_full_mobile__onxwjue8 sprinkles_justifyContent_stretch_mobile__onxwjum8"
            >
              <div
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjufs HorizontalAutoScroller_item__2i92q04"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_columnStyle__1ycz12q1c Column_columnStyle_grow_false__1ycz12q1i Column_columnStyle_noShrink_true__1ycz12q1j"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_width_full_mobile__onxwjufs sprinkles_height_full_mobile__onxwjue8 HorizontalAutoScroller_controllerCol__2i92q01"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_position_absolute_mobile__onxwju9c sprinkles_alignItems_center_mobile__onxwjukk sprinkles_justifyContent_flexEnd_mobile__onxwjukw HorizontalAutoScroller_controllerBtn__2i92q00 HorizontalAutoScroller_nextBtn__2i92q03"
        >
          <button
            class="reset_trimmedElement__4z7xt30 reset_button__4z7xt34 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l1g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3o useBoxStyles_display_inlineBlock__3xgq1lge useBoxStyles_overflow_hidden__3xgq1lg4 useBoxStyles_textAlign_center__3xgq1lg2 useBoxStyles_border_style__3xgq1l9k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lb9 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lbp useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lc5 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1ldl useTextStyles_root__1xnpmd70 reset_block__4z7xt33 useTextStyles_colours_white__1xnpmd7g useTextStyles_fontWeight_semiBold__1xnpmd7p useTextStyles_sizes_4__1xnpmd74 Button_button__p2yon53 focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon55 Button_button_shape_iconOnly__p2yon59 Button_button_intent_secondary__p2yon5c Button_button_minimal_false__p2yon5i Button_button_compound_5__p2yon5o"
            type="button"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_height_full_mobile__onxwjue8 sprinkles_alignItems_center_mobile__onxwjukk sprinkles_justifyContent_center_mobile__onxwjulc Button_body__p2yon50"
            >
              <span
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_display_block_mobile__onxwju74 Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              >
                <svg
                  aria-hidden="true"
                  class="useBoxStyles_display_block__3xgq1lg9 useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.585 16.584l4.586-4.586-4.586-4.586L10 5.998l6 6-6 6-1.414-1.414z"
                  />
                </svg>
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_flexDirection_column_mobile__onxwjuoo Stack_child_default__1417p7aa Stack_child_spaces_5__1417p7a4"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjufs Section_root__184s6x60 Section_width_small__184s6x61"
      >
        <div
          class="SliderProgress_root__17uw35s0"
          style="grid-template-columns: repeat(8, 1fr);"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju98 SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju74 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju74 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3 ProgressStep_active__15qfq7e4 ProgressStep_paused__15qfq7e5"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju98 SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju74 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_none_mobile__onxwju70 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju98 SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju74 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_none_mobile__onxwju70 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju98 SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju74 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_none_mobile__onxwju70 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju98 SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju74 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_none_mobile__onxwju70 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju98 SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju74 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_none_mobile__onxwju70 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju98 SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju74 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_none_mobile__onxwju70 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju98 SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju74 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_none_mobile__onxwju70 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HorizontalAutoScroller /> > should match the snapshot with custom slider colour 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_flexDirection_column_mobile__onxwjuoo Stack_child_default__1417p7aa Stack_child_spaces_5__1417p7a4"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju98 sprinkles_overflow_hidden_mobile__onxwju88"
      >
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_position_absolute_mobile__onxwju9c sprinkles_alignItems_center_mobile__onxwjukk sprinkles_justifyContent_flexStart_mobile__onxwjul4 HorizontalAutoScroller_controllerBtn__2i92q00 HorizontalAutoScroller_prevBtn__2i92q02"
        >
          <button
            class="reset_trimmedElement__4z7xt30 reset_button__4z7xt34 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l1g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3o useBoxStyles_display_inlineBlock__3xgq1lge useBoxStyles_overflow_hidden__3xgq1lg4 useBoxStyles_textAlign_center__3xgq1lg2 useBoxStyles_border_style__3xgq1l9k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lb9 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lbp useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lc5 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1ldl useTextStyles_root__1xnpmd70 reset_block__4z7xt33 useTextStyles_colours_white__1xnpmd7g useTextStyles_fontWeight_semiBold__1xnpmd7p useTextStyles_sizes_4__1xnpmd74 Button_button__p2yon53 focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon55 Button_button_shape_iconOnly__p2yon59 Button_button_intent_secondary__p2yon5c Button_button_minimal_false__p2yon5i Button_button_compound_5__p2yon5o"
            type="button"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_height_full_mobile__onxwjue8 sprinkles_alignItems_center_mobile__onxwjukk sprinkles_justifyContent_center_mobile__onxwjulc Button_body__p2yon50"
            >
              <span
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_display_block_mobile__onxwju74 Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              >
                <svg
                  aria-hidden="true"
                  class="useBoxStyles_display_block__3xgq1lg9 useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.414 16.584l-4.586-4.586 4.586-4.586-1.415-1.414-6 6 6 6 1.415-1.414z"
                  />
                </svg>
              </span>
            </div>
          </button>
        </div>
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_width_full_mobile__onxwjufs sprinkles_overflow_hidden_mobile__onxwju88 sprinkles_flexDirection_row_mobile__onxwjuok useNegativeMarginLeft_makeResponsiveStyle_key_bp__10sqwm2g useNegativeMarginTop_makeResponsiveStyle_key_bp__rvovxwg Columns_columnsStyle__15fwc1828 Columns_columnsStyle_align_stretch__15fwc1829 Columns_columnsStyle_noWrap_true__15fwc182e Columns_columnsStyle_wrappingDirection_default__15fwc182f"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_columnStyle__1ycz12q1c Column_columnStyle_grow_false__1ycz12q1i Column_columnStyle_noShrink_true__1ycz12q1j"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_width_full_mobile__onxwjufs sprinkles_height_full_mobile__onxwjue8 HorizontalAutoScroller_controllerCol__2i92q01"
            >
              <span />
            </div>
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1c Column_columnStyle_grow_false__1ycz12q1i Column_columnStyle_noShrink_true__1ycz12q1j Column_columnStyle_alignSelf_stretch__1ycz12q1f Column__1ycz12q1a sprinkles_alignSelf_stretch_mobile__onxwjuo4"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_width_full_mobile__onxwjufs sprinkles_height_full_mobile__onxwjue8 sprinkles_justifyContent_stretch_mobile__onxwjum8"
            >
              <div
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjufs HorizontalAutoScroller_item__2i92q04 HorizontalAutoScroller_active__2i92q05"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1c Column_columnStyle_grow_false__1ycz12q1i Column_columnStyle_noShrink_true__1ycz12q1j Column_columnStyle_alignSelf_stretch__1ycz12q1f Column__1ycz12q1a sprinkles_alignSelf_stretch_mobile__onxwjuo4"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_width_full_mobile__onxwjufs sprinkles_height_full_mobile__onxwjue8 sprinkles_justifyContent_stretch_mobile__onxwjum8"
            >
              <div
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjufs HorizontalAutoScroller_item__2i92q04"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1c Column_columnStyle_grow_false__1ycz12q1i Column_columnStyle_noShrink_true__1ycz12q1j Column_columnStyle_alignSelf_stretch__1ycz12q1f Column__1ycz12q1a sprinkles_alignSelf_stretch_mobile__onxwjuo4"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_width_full_mobile__onxwjufs sprinkles_height_full_mobile__onxwjue8 sprinkles_justifyContent_stretch_mobile__onxwjum8"
            >
              <div
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjufs HorizontalAutoScroller_item__2i92q04"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_flexBasis_1/2_mobile__1ycz12q0 Column_columnStyle__1ycz12q1c Column_columnStyle_grow_false__1ycz12q1i Column_columnStyle_noShrink_true__1ycz12q1j Column_columnStyle_alignSelf_stretch__1ycz12q1f Column__1ycz12q1a sprinkles_alignSelf_stretch_mobile__onxwjuo4"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_width_full_mobile__onxwjufs sprinkles_height_full_mobile__onxwjue8 sprinkles_justifyContent_stretch_mobile__onxwjum8"
            >
              <div
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjufs HorizontalAutoScroller_item__2i92q04"
              >
                <span />
              </div>
            </div>
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_columnStyle__1ycz12q1c Column_columnStyle_grow_false__1ycz12q1i Column_columnStyle_noShrink_true__1ycz12q1j"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_width_full_mobile__onxwjufs sprinkles_height_full_mobile__onxwjue8 HorizontalAutoScroller_controllerCol__2i92q01"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju7c sprinkles_position_absolute_mobile__onxwju9c sprinkles_alignItems_center_mobile__onxwjukk sprinkles_justifyContent_flexEnd_mobile__onxwjukw HorizontalAutoScroller_controllerBtn__2i92q00 HorizontalAutoScroller_nextBtn__2i92q03"
        >
          <button
            class="reset_trimmedElement__4z7xt30 reset_button__4z7xt34 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l1g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3o useBoxStyles_display_inlineBlock__3xgq1lge useBoxStyles_overflow_hidden__3xgq1lg4 useBoxStyles_textAlign_center__3xgq1lg2 useBoxStyles_border_style__3xgq1l9k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lb9 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lbp useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lc5 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1ldl useTextStyles_root__1xnpmd70 reset_block__4z7xt33 useTextStyles_colours_white__1xnpmd7g useTextStyles_fontWeight_semiBold__1xnpmd7p useTextStyles_sizes_4__1xnpmd74 Button_button__p2yon53 focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon55 Button_button_shape_iconOnly__p2yon59 Button_button_intent_secondary__p2yon5c Button_button_minimal_false__p2yon5i Button_button_compound_5__p2yon5o"
            type="button"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_height_full_mobile__onxwjue8 sprinkles_alignItems_center_mobile__onxwjukk sprinkles_justifyContent_center_mobile__onxwjulc Button_body__p2yon50"
            >
              <span
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_display_block_mobile__onxwju74 Icon_makeResponsiveStyle_key_bp__1gy3ire4"
              >
                <svg
                  aria-hidden="true"
                  class="useBoxStyles_display_block__3xgq1lg9 useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.585 16.584l4.586-4.586-4.586-4.586L10 5.998l6 6-6 6-1.414-1.414z"
                  />
                </svg>
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_flexDirection_column_mobile__onxwjuoo Stack_child_default__1417p7aa Stack_child_spaces_5__1417p7a4"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjufs Section_root__184s6x60 Section_width_small__184s6x61"
      >
        <div
          class="SliderProgress_root__17uw35s0"
          style="grid-template-columns: repeat(4, 1fr);"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju98 SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju74 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju74 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3 ProgressStep_active__15qfq7e4 ProgressStep_paused__15qfq7e5"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju98 SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju74 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_none_mobile__onxwju70 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju98 SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju74 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_none_mobile__onxwju70 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju98 SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju74 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_none_mobile__onxwju70 sprinkles_position_absolute_mobile__onxwju9c ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
